--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -3,6 +3,12 @@ name: Terraform Workflow
 on:
   workflow_dispatch:
 
+# env:
+#   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#   BUCKET_TF_STATE: ${{ secrets.TF_STATE_BUCKET }}
+#   AWS_REGION: us-east-1
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
