--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -20,28 +20,20 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: 1.0.8
+        terraform_version: 1.6.3
 
     - name: Terraform formatting
-      run: |
-        if terraform fmt -check; then
-          echo "Terraform files are formatted correctly."
-          echo "::set-output name=fmt_success::true"
-        else
-          echo "Terraform files are not formatted correctly."
-          echo "::set-output name=fmt_success::false"
-        fi
+      run: terraform fmt -check
+      continue-on-error: false
 
     - name: Initialize Terraform
-      # if: steps.fmt_check.outputs.fmt_success == 'true'
       run: terraform init
 
     - name: Plan Terraform changes
-      if: steps.fmt_check.outputs.fmt_success == 'true'
       run: terraform plan
 
     - name: Apply Terraform changes
-      if: steps.fmt_check.outputs.fmt_success == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/main'
+      if: success()
       run: terraform apply -auto-approve
 
     # Optionally you may want to include steps for destroying infrastructure
